fixed z-index issue

--- a/src/Pages/Manage/Manage.scss
+++ b/src/Pages/Manage/Manage.scss
@@ -102,7 +102,7 @@
     border-radius: 4px;
     font-size: 14px;
     padding-top: 28px;
-    z-index: 1;
+    z-index: 2;
     bottom: 0;
     right: 15px;
 
